src/objects/Trail__c.object
<CustomObject>
    <customHelpPage>Trail_Help</customHelpPage>
    <description>Trail information for a park and hence will need to track name, distance and the last date it was inspected</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of the Trail</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <inlineHelpText>Distance of the trail</inlineHelpText>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <inlineHelpText>Last Inspection Date of the trail</inlineHelpText>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>